优化了登录页面布局

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>银行购物系统</title>
   </head>
-  <body>
+  <body style="min-width: 1420px;">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
