改进订单管理页面

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="https://www.csxbank.com/Upload/Template/yizhu/SiteConfigPhoto/Original/202008/72edc4bb-a942-4742-8972-8ea6fd989d22.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>银行购物系统</title>
   </head>
